Improvement spark-hive test app (#37)
* feat: Improved spark hive connection test app and added TLS support to connect to S3 and Hive securly. Added integration tests for spark-hive connection and for volcano

* fix: removed extra '/'

* fix: added ROF support

* fix: fixed linters

* fix: Updated objects